--- a/QR/qrcode_api/Gemfile
+++ b/QR/qrcode_api/Gemfile
@@ -25,7 +25,11 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 gem 'paperclip'
 
+# used for decoding QR code
 gem 'zxing'
+
+#used for encoding QR code
+gem 'rqrcode'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
