--- a/Origami/Assembly-CSharp.csproj
+++ b/Origami/Assembly-CSharp.csproj
@@ -51,7 +51,9 @@
      <Compile Include="Assets\Holograms\Support\Spatial Mapping\SpatialMapping.cs" />
      <Compile Include="Assets\Holograms\Support\Underworld\UnderworldReset.cs" />
      <Compile Include="Assets\Holograms\Support\Underworld\UnderworldSound.cs" />
+     <Compile Include="Assets\Scripts\FurnitureFactory.cs" />
      <Compile Include="Assets\Scripts\GazeGestureManager.cs" />
+     <Compile Include="Assets\Scripts\HoloLensInputModule.cs" />
      <Compile Include="Assets\Scripts\ShowMenu.cs" />
      <Compile Include="Assets\Scripts\SpeechManager.cs" />
      <Compile Include="Assets\Scripts\SphereCommands.cs" />
