--- a/FYDP/Assembly-CSharp-Editor.csproj
+++ b/FYDP/Assembly-CSharp-Editor.csproj
@@ -48,12 +48,16 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\editor\AssetBundleBuilder.cs" />
      <Compile Include="Assets\Scripts\editor\LoadAssets.cs" />
+     <Compile Include="Assets\Scripts\editor\PrefabCreator.cs" />
      <None Include="Assets\Resources\Materials\DrawOnWall.shader" />
      <None Include="Assets\Resources\Wireframe.shader" />
      <None Include="Assets\Resources\DebugNormals.shader" />
      <None Include="Assets\Resources\Occlusion.shader" />
  <Reference Include="Assembly-UnityScript">
  <HintPath>C:/Users/ruoyu/Google Drive/University/4A/FYDP/hololens/FYDP/Library/ScriptAssemblies/Assembly-UnityScript.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Advertisements">
+ <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/UnityEngine.Advertisements.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.Advertisements">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
@@ -96,6 +100,9 @@
  </Reference>
  <Reference Include="UnityEngine.HoloLens">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityHoloLens/RuntimeEditor/UnityEngine.HoloLens.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Purchasing">
+ <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityPurchasing/UnityEngine.Purchasing.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.VR">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/Editor/UnityEditor.VR.dll</HintPath>
